--- a/components/ui/Alert/Alert.module.scss
+++ b/components/ui/Alert/Alert.module.scss
@@ -2,14 +2,15 @@
 
 .wrapper {
   display: flex;
-  align-items: flex-start;
+  align-items: center;
   gap: var(--unit-3);
   padding: var(--unit-3);
   border-radius: var(--unit-2);
   margin-bottom: var(--unit-2);
   border: 1px solid transparent;
-  width: 100%;    
-  align-items: center;
+  width: 100%;
+  max-width: 100%;
+  box-sizing: border-box;
 
   &:last-child {
     margin-bottom: 0;
